--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
                  Akan name will be displayed as a pop up on the top of the page</p>
         </div>
     </div>
+    <center>
+        <div class="form">
+            <div class="details">
+
+                <p>Enter your birthdate</p>
+                <input type="number" name="day" id="day">
+                <p>Enter your birthmonth</p>
+                <input type="number" name="month" id="month">
+                <p>Enter your birthyear</p>
+                <input type="number" name="year" id="year">
+            </div>
 </body>
 </html>
