--- a/index.html
+++ b/index.html
@@ -31,5 +31,18 @@
                 <p>Enter your birthyear</p>
                 <input type="number" name="year" id="year">
             </div>
+            <div class="Gender">
+                <p>Scroll to select your gender</p>
+                <label for="gender">Gender</label>
+
+                <select name="gender" id="my">
+                    <option value=""></option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+            </div><br><br>
+            <button id="button" onclick="OnSubmit()">Submit</button>
+        </div>
+    </center>
 </body>
 </html>
