add class container to html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 <body>
+    <div class="container">
         <div class="section">
             <div class="about">
                 <h1>Akan Names Generator</h1>
-                <p>According to the Ghanian culture, people are given their first names depending<br> 
+                <p>According to the Ghanian culture, people are given their first names depending<br>
                     on the day of the week they were born. Each gender has names that correspond<br>
                     to the seven days of the week. This website is a way of calculating a person's <br>
                     Akan name depending on the day, the month, and the year they were born</p>
                 <h2>How it works</h2>
                 <p>The user is supposed to enter their birthday details as prompted. Don't worry, <br>
                     the day of the week in which you were born will be calculated for you too! Your<br>
-                     Akan name will be displayed as a pop up on the top of the page</p>
+                    Akan name will be displayed as a pop up on the top of the page</p>
             </div>
         </div>
-
         <center>
             <div class="form">
                 <div class="details">
@@ -47,8 +47,9 @@
                 <button id="button" onclick="OnSubmit()">Submit</button>
             </div>
         </center>
+    </div>
     <center>
-    <p style="font-size: 30px; font-weight: 900; color: brown;">Have fun knowing your Akan Name</p>
+        <p style="font-size: 30px; font-weight: 900; color: brown;">Have fun knowing your Akan Name</p>
     </center>
     <script src="script.js"></script>
 </body>
