--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <center>
-            <div class="form">
+            <div class="form" name="mydetails">
                 <div class="details">
 
                     <p>Enter your birthdate</p>
@@ -38,13 +38,13 @@
                     <p>Scroll to select your gender</p>
                     <label for="gender">Gender</label>
 
-                    <select name="gender" id="my">
+                    <select name="gender" id="mygender">
                         <option value=""></option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                     </select>
                 </div><br><br>
-                <button id="button" onclick="OnSubmit()">Submit</button>
+                <button id="button" onclick="hello()">Submit</button>
             </div>
         </center>
     </div>
