call function: validate

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <option value="female">Female</option>
                     </select>
                 </div><br><br>
-                <button id="button" onclick="hello()">Submit</button>
+                <button id="button" onclick="validate()">Submit</button>
             </div>
         </center>
     </div>
