continue styling headers in html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,21 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
+
 <body>
     <div class="container">
         <div class="section">
             <div class="about">
-                <h1>Akan Names Generator</h1>
+                <div class="card-tittle">
+                    <h1>Akan Names Generator</h1>
+                </div>
                 <p>According to the Ghanian culture, people are given their first names depending<br>
                     on the day of the week they were born. Each gender has names that correspond<br>
                     to the seven days of the week. This website is a way of calculating a person's <br>
                     Akan name depending on the day, the month, and the year they were born</p>
-                <h2>How it works</h2>
+                <div class="card-tittle">
+                    <h2>How it works</h2>
+                </div>
                 <p>The user is supposed to enter their birthday details as prompted. Don't worry, <br>
                     the day of the week in which you were born will be calculated for you too! Your<br>
                     Akan name will be displayed as a pop up on the top of the page</p>
@@ -53,4 +59,5 @@
     </center>
     <script src="script.js"></script>
 </body>
+
 </html>
