finish javascript functions

--- a/index.html
+++ b/index.html
@@ -1,64 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <title>Akan names</title>
 </head>
-
 <body>
-    <div class="container">
-        <div class="section">
-            <div class="about">
-                <div class="card-tittle">
-                    <h1>Akan Names Generator</h1>
-                </div>
-                <p>According to the Ghanian culture, people are given their first names depending<br>
-                    on the day of the week they were born. Each gender has names that correspond<br>
-                    to the seven days of the week. This website is a way of calculating a person's <br>
-                    Akan name depending on the day, the month, and the year they were born</p>
-                <div class="card-tittle">
-                    <h2>How it works</h2>
-                </div>
-                <p>The user is supposed to enter their birthday details as prompted. Don't worry, <br>
-                    the day of the week in which you were born will be calculated for you too! Your<br>
-                    Akan name will be displayed as a pop up on the top of the page</p>
-            </div>
-        </div>
-        <center>
-            <div class="form" name="mydetails">
-                <div class="details">
-
-                    <p>Enter your birthdate</p>
-                    <input type="number" name="day" id="day">
-                    <p>Enter your birthmonth</p>
-                    <input type="number" name="month" id="month">
-                    <p>Enter your birthyear</p>
-                    <input type="number" name="year" id="year">
-                </div>
-                <div class="Gender">
-                    <p>Scroll to select your gender</p>
-                    <label for="gender">Gender</label>
-
-                    <select name="gender" id="mygender">
-                        <option value=""></option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-                </div><br><br>
-                <button id="button" onclick="validate()">Submit</button>
-            </div>
-        </center>
-    </div>
-    <center>
-        <p style="font-size: 30px; font-weight: 900; color: brown;">Have fun knowing your Akan Name</p>
-    </center>
-    <script src="script.js"></script>
+    <form id="myform">
+        <input type="text" id="date" placeholder="enter birthdate"><br><br>
+        <input type="text" id="month" placeholder="enter birthmonth"><br><br>
+        <input type="text" id="year" placeholder="enter birthyear"><br><br>
+        <input type="radio" id="male" name="gender" required>Male <br><br>
+        <input type="radio" id="female" name="gender" required>Female <br><br>
+        <input type="button" value="submit" id="submitButton" onclick="akanName(); return false">
+        <p id="results">Calculated: </p>
+    </form>
+    <script src="js/scripts.js"></script>
 </body>
-
 </html>
